[gd_scene load_steps=2 format=3 uid="uid://bs37bgo8oecj7"]

[ext_resource type="Script" uid="uid://bw32xboegpbmn" path="res://scripts/ui/card_display_panel.gd" id="1_script"]

[node name="CardDisplayPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="PanelBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1304.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.937255, 0.866667, 0.909804)

[node name="CardScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 72.0
offset_right = -1308.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="CardGridContainer" type="GridContainer" parent="CardScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1377.0
offset_top = 9.0
offset_right = -1309.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "‚ùå"
flat = true
